--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,10 +13,29 @@
             body { margin: 0; }
             canvas { width: 100%; height: 100% }
         </style>
-        <title></title>
+        <title>Simulator</title>
     </head>
     <body>
         <div class="container">
+            <hr>
+            <div class="row">
+                <div class="offset-4 col-2">
+                    <a href="index.html">Simulation</a>
+                </div>
+                <div class="col-2">
+                    <a href="background.html">Background Info</a>
+                </div>
+            </div>
+            <hr>
+        </div>
+
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 d-flex flex-row justify-content-center">
+                    <h1>Stern Gerlach Experiment</h1>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-12">
                     <div class="input-group mb-3 d-flex flex-row justify-content-center">
@@ -76,6 +95,13 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Dimension</span>
+                            </div>
+                            <input id="dimension" min="1" type="number" aria-label="dimension" class="form-control"/>
                         </div>
 
                         <div class="input-group">
